--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ button {
         margin-bottom: 10px;
         display: block;
     }
-    .mb-0{
+    .container{
         text-align:center;
     }
     
