--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,7 @@ button {
 	.calendario {
 		width: 100%;
 		max-width: none;
+        margin-left: 22%;
 	}
 	.calendario-calendar {
 		grid-template-columns: repeat(3, 1fr);
