--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ button {
 	border-radius: 10px;
 	/* box-shadow: 0 0 2px 0 rgba(#000, .2), 0 5px 10px 0 rgba(#000, .1); */
 	padding: 1rem;
-	margin: 0 auto;
+	/* margin: 0 auto; */
 }
 
 .calendario-top {
