--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,6 @@ button {
 	.calendario {
 		width: 100%;
 		max-width: none;
-        margin-left: 2%;
 	}
 	.calendario-calendar {
 		grid-template-columns: repeat(3, 1fr);
@@ -294,7 +293,7 @@ button {
     }
 }
 
-/*Pequeñas Tablets (min-width: 576px and max-width: 768px) */
+/* Small Tablets (min-width: 576px and max-width: 768px) */
 @media (min-width: 576px) and (max-width: 768px) {
     .navbar-nav .nav-item {
         margin-left: 0;
@@ -322,7 +321,6 @@ button {
     .calendario {
 		width: 100%;
 		max-width: none;
-        margin-left: 2%;
 	}
 	.calendario-calendar {
 		grid-template-columns: repeat(4, 1fr);
@@ -332,7 +330,7 @@ button {
 	}
 }
 
-/* Tablets (min-width: 768px and max-width: 1200px) */
+/* Tablets and Small Laptops (min-width: 768px and max-width: 1200px) */
 @media (min-width: 768px) and (max-width: 1200px) {
     .videoSec {
         height: 60vh;
@@ -358,7 +356,6 @@ button {
     }
     .calendario {
 		width: 80%;
-        margin-left: 2%;
 	}
 	.reservas input {
 		margin-left: 0;
@@ -366,10 +363,9 @@ button {
 	}
 }
 
-/* Mas grandes (max-width: 1200px) */
+/* Larger Devices (max-width: 1200px) */
 @media (max-width: 1200px) {
 	.calendario {
-        margin-left: 2%;
 		width: 80%;
 	}
 	.reservas input {
@@ -381,7 +377,6 @@ button {
 @media (max-width: 992px) {
 	.calendario {
 		width: 90%;
-        
 	}
 	.reservas input {
 		width: 95%;
