--- a/css/styles.css
+++ b/css/styles.css
@@ -143,23 +143,14 @@ footer {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
 }
 
-/**/
-button {
-	font: inherit;
-	cursor: pointer;
-	&:focus {
-		outline: 0;
-	}
-}
-
+/* CALENDARIO */
 .calendario {
 	width: 95%;
 	max-width: 370px;
 	background-color: var(--c-bg-tertiary);
 	border-radius: 10px;
-	/* box-shadow: 0 0 2px 0 rgba(#000, .2), 0 5px 10px 0 rgba(#000, .1); */
 	padding: 1rem;
-	/* margin: 0 auto; */
+	margin: 0 auto; /* Centramos el calendario */
 }
 
 .calendario-top {
@@ -178,7 +169,7 @@ button {
 
 .month-selector {
 	display: flex;
-	justify-content: center;
+	justify-content:center;
 	align-items: center;
 }
 
@@ -228,11 +219,12 @@ button {
 	border: 2px solid transparent;
 	background-color: transparent;
 	cursor: pointer;
-	&:focus {
-		outline: 0;
-		color: var(#008FFD);
-		border: 2px solid var(--color--tema--primario-accent);
-	}	
+}
+
+.date:focus {
+	outline: 0;
+	color: var(#008FFD);
+	border: 2px solid var(--color--tema--primario-accent);
 }
 
 .faded {
@@ -243,9 +235,10 @@ button {
 	color: #FFF;
 	border-color: var(--color--tema--primario);
 	background-color: var(--color--tema--primario);
-	&:focus {
-		background-color: var(--color--tema--primario-accent);
-	}
+}
+
+.current-day:focus {
+	background-color: var(--color--tema--primario-accent);
 }
 
 .visita {
@@ -263,8 +256,9 @@ button {
 	width: 80%;
 }
 
+/* Responsive Styles */
 
-/* Celulares (max-width: 576px) */
+/* Mobile Adjustments (max-width: 576px) */
 @media (max-width: 576px) {
 	.calendario {
 		width: 100%;
@@ -276,49 +270,26 @@ button {
 	.visita h3 {
 		font-size: 0.875rem;
 	}
-    .videoSec {
-        height: 40vh;
-    }
-    .container {
-        text-align: center;
-    }
-    .videoSec__texto {
-        font-size: 3em;
-    }
-    .videoSec__content {
-        padding: 0 10px;
-    }
-    .btn {
-        margin-top: 10px;
-    }
+	.videoSec {
+		height: 40vh;
+	}
+	.container {
+		text-align: center;
+	}
+	.videoSec__texto {
+		font-size: 3em;
+	}
+	.videoSec__content {
+		padding: 0 10px;
+	}
+	.btn {
+		margin-top: 10px;
+	}
 }
 
 /* Small Tablets (min-width: 576px and max-width: 768px) */
 @media (min-width: 576px) and (max-width: 768px) {
-    .navbar-nav .nav-item {
-        margin-left: 0;
-        margin-bottom: 10px;
-        display: block;
-    }
-    .container {
-        text-align: center;
-    }
-    .videoSec {
-        height: 25vh;
-    }
-    .videoSec__texto {
-        font-size: 3em;
-    }
-    .videoSec__content {
-        padding: 0 10px;
-    }
-    .btn {
-        margin-top: 10px;
-    }   
-    .grid-container {
-        grid-template-columns: 1fr;
-    }
-    .calendario {
+	.calendario {
 		width: 100%;
 		max-width: none;
 	}
@@ -328,38 +299,62 @@ button {
 	.visita h3 {
 		font-size: 1rem;
 	}
+	.navbar-nav .nav-item {
+		margin-left: 0;
+		margin-bottom: 10px;
+		display: block;
+	}
+	.container {
+		text-align: center;
+	}
+	.videoSec {
+		height: 25vh;
+	}
+	.videoSec__texto {
+		font-size: 3em;
+	}
+	.videoSec__content {
+		padding: 0 10px;
+	}
+	.btn {
+		margin-top: 10px;
+	}
+	.grid-container {
+		grid-template-columns: 1fr;
+	}
 }
 
 /* Tablets and Small Laptops (min-width: 768px and max-width: 1200px) */
 @media (min-width: 768px) and (max-width: 1200px) {
-    .videoSec {
-        height: 60vh;
-    }
-    .container {
-        text-align: center;
-        width: 100%;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-    .navbar__brand img {
-        height: 60px;
-    }
-    .navbar-nav {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .navbar-nav .nav-item {
-        margin-left: 0;
-    }
-    .navbar-nav .nav-link {
-        padding-left: 15px;
-    }
-    .calendario {
+	.calendario {
 		width: 80%;
+		margin: 0 auto;
 	}
 	.reservas input {
 		margin-left: 0;
 		width: 90%;
+	}
+	.videoSec {
+		height: 60vh;
+	}
+	.container {
+		text-align: center;
+		width: 100%;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.navbar__brand img {
+		height: 60px;
+	}
+	.navbar-nav {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	.navbar-nav .nav-item {
+		margin-left: 0;
+	}
+	.navbar-nav .nav-link {
+		padding-left: 15px;
 	}
 }
 
@@ -367,6 +362,7 @@ button {
 @media (max-width: 1200px) {
 	.calendario {
 		width: 80%;
+		margin: 0 auto;
 	}
 	.reservas input {
 		margin-left: 0;
@@ -377,6 +373,7 @@ button {
 @media (max-width: 992px) {
 	.calendario {
 		width: 90%;
+		margin: 0 auto;
 	}
 	.reservas input {
 		width: 95%;
