--- a/css/styles.css
+++ b/css/styles.css
@@ -257,37 +257,39 @@ footer {
 }
 
 
-.footer {
+/* General styles */
+.bg-dark {
     background-color: #333;
+}
+
+.text-white {
     color: #fff;
-    padding: 20px;
 }
 
-.footer-content {
+.py-5 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+/* Flexbox alignment for the icons */
+.d-flex {
     display: flex;
-    justify-content: space-between;
+}
+
+.justify-content-lg-end {
+    justify-content: flex-end;
+}
+
+.align-items-center {
     align-items: center;
-    flex-wrap: wrap;
 }
 
-.footer-text {
-    margin: 0;
-}
-
-.footer-logos {
-    display: flex;
-    gap: 10px;
-}
-
-.footer-logo {
-    width: 40px;
-    height: auto;
+.mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 /* Responsive Styles */
-
-
-
 /* Mobile (max-width: 576px) */
 @media (max-width: 576px) {
 	.calendario {
@@ -355,6 +357,29 @@ footer {
 	.grid-container {
 		grid-template-columns: 1fr;
 	}
+	.text-center {
+        text-align: center;
+    }
+
+    .text-left {
+        text-align: left;
+    }
+
+    .order-lg-1 {
+        order: 1;
+    }
+
+    .order-lg-2 {
+        order: 2;
+    }
+
+    .justify-content-lg-end {
+        justify-content: center;
+    }
+
+    .footer .row .col-md-4 {
+        margin-bottom: 20px;
+    }
 }
 
 /* Tablets (min-width: 768px and max-width: 1200px) */
