--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,69 @@
   color: #ce9e9e;
 }
 
+/*Eventos*/
+.event img {
+  width: 100%;
+  height: 485px;
+}
+
+.event h2 {
+  text-align: center;
+  width: 500px;
+  background-color: rgba(78, 57, 155, 0.5764705882);
+  position: relative;
+  animation-name: example;
+  animation-duration: 25s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes example {
+  0% {
+    background-color: rgba(105, 59, 59, 0.7607843137);
+    left: 0px;
+    top: 0px;
+  }
+  10% {
+    background-color: rgba(78, 57, 155, 0.5764705882);
+    left: 200px;
+    top: 0px;
+  }
+  20% {
+    background-color: rgba(78, 57, 155, 0.5764705882);
+    left: 400px;
+    top: 0px;
+  }
+  30% {
+    background-color: rgba(78, 57, 155, 0.5764705882);
+    left: 600px;
+    top: 0px;
+  }
+  50% {
+    background-color: rgba(105, 59, 59, 0.7607843137);
+    left: 800px;
+    top: 0px;
+  }
+  65% {
+    background-color: rgba(78, 57, 155, 0.5764705882);
+    left: 600px;
+    top: 0px;
+  }
+  80% {
+    background-color: rgba(78, 57, 155, 0.5764705882);
+    left: 400px;
+    top: 0px;
+  }
+  90% {
+    background-color: rgba(78, 57, 155, 0.5764705882);
+    left: 200px;
+    top: 0px;
+  }
+  100% {
+    background-color: rgba(105, 59, 59, 0.7607843137);
+    left: 0px;
+    top: 0px;
+  }
+}
 /* Estilos generales */
 /* Estilos específicos para la sección de video */
 .videoSec {
