--- a/scss/_cabecera.scss
+++ b/scss/_cabecera.scss
@@ -24,3 +24,31 @@
   .navbar-nav .nav-link:hover {
     color: #ce9e9e;
   }
+
+/*Eventos*/
+.event img{
+    width: 100%;
+    height: 485px;}
+
+.event h2{
+    text-align: center;
+    width: 500px;
+    // height: 100px;
+    background-color: #4e399b93;
+    position: relative;
+    animation-name: example;
+    animation-duration: 25s;
+    animation-iteration-count: infinite}
+@keyframes example {
+        0%   {background-color:#693b3bc2; left:0px; top:0px;}
+        10%  {background-color:#4e399b93; left:200px; top:0px;}
+        20%  {background-color:#4e399b93; left:400px; top:0px;}
+        30%  {background-color:#4e399b93; left:600px; top:0px;}
+        50% {background-color:#693b3bc2; left:800px; top:0px;}
+        65%  {background-color:#4e399b93; left:600px; top:0px;}
+        80%  {background-color:#4e399b93; left:400px; top:0px;}
+        90%  {background-color:#4e399b93; left:200px; top:0px;}
+        100%   {background-color:#693b3bc2; left:0px; top:0px;}
+      }
+
+      
