--- a/scss/config/_reset.scss
+++ b/scss/config/_reset.scss
@@ -13,5 +13,8 @@
     --c-text-primary: #1F1F25;
     --c-text-secondary: #999FA6;
     --color--tema-terciario:#74090565;
+    --color-baner-a:#693b3b31;
+    --color-baner-b:#68afac2d;
+    --color-baner-c:#4e399b94;
   }
   
