--- a/scss/_medq.scss
+++ b/scss/_medq.scss
@@ -144,9 +144,21 @@
     .footer .row .col-md-4 {
       margin-bottom: 20px;
     }
+    .event h2{
+        width: 100%;
+    }
+    .event img{
+      height: 200px;
+    }
+    @keyframes eventos {
+        0%   {background-color:var(--color-baner-a);}
+        50%  {background-color:var(--color-baner-b);}
+        100% {background-color:(--color-baner-c);}
+      }
+
   }
-  /* Mas grandes (max-width: 1200px) */
-  @media (max-width: 1200px) {
+  /* Mas grandes (min-width: 1200px) */
+  @media (min-width: 1200px) {
     .calendario {
       width: 80%;
       margin-left: 35%;
@@ -155,6 +167,17 @@
       margin-left: 0;
       width: 90%;
     }
+    @keyframes eventos {
+        0%   {background-color:var(--color-baner-a); left:0px; top:0px;}
+        10%  {background-color:(--color-baner-b); left:200px; top:0px;}
+        20%  {background-color:(--color-baner-c); left:400px; top:0px;}
+        30%  {background-color:(--color-baner-c); left:600px; top:0px;}
+        50%  {background-color:var(--color-baner-a); left:800px; top:0px;}
+        65%  {background-color:(--color-baner-b); left:600px; top:0px;}
+        80%  {background-color:(--color-baner-a);left:400px; top:0px;}
+        90%  {background-color:(--color-baner-b); left:200px; top:0px;}
+        100% {background-color:(--color-baner-a); left:0px; top:0px;}
+      }
   }
   @media (max-width: 992px) {
     .calendario {
@@ -164,6 +187,8 @@
     .reservas input {
       width: 95%;
     }
+
+
   }
   
   
