--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,23 @@ footer {
   .footer .row .col-md-4 {
     margin-bottom: 20px;
   }
+  .event h2 {
+    width: 100%;
+  }
+  .event img {
+    height: 200px;
+  }
+  @keyframes eventos {
+    0% {
+      background-color: var(--color-baner-a);
+    }
+    50% {
+      background-color: var(--color-baner-b);
+    }
+    100% {
+      background-color: --color-baner-c;
+    }
+  }
 }
 /* Tablets mas chicas (min-width: 576px and max-width: 768px) */
 @media (min-width: 576px) and (max-width: 768px) {
@@ -420,6 +437,23 @@ footer {
   }
   .footer .row .col-md-4 {
     margin-bottom: 20px;
+  }
+  .event h2 {
+    width: 100%;
+  }
+  .event img {
+    height: 200px;
+  }
+  @keyframes eventos {
+    0% {
+      background-color: var(--color-baner-a);
+    }
+    50% {
+      background-color: var(--color-baner-b);
+    }
+    100% {
+      background-color: --color-baner-c;
+    }
   }
 }
 /* Tablets (min-width: 768px and max-width: 1200px) */
@@ -552,6 +586,23 @@ footer {
   }
   .reservas input {
     width: 95%;
+  }
+  .event h2 {
+    width: 100%;
+  }
+  .event img {
+    height: 200px;
+  }
+  @keyframes eventos {
+    0% {
+      background-color: var(--color-baner-a);
+    }
+    50% {
+      background-color: var(--color-baner-b);
+    }
+    100% {
+      background-color: --color-baner-c;
+    }
   }
 }
 
