--- a/css/main.css
+++ b/css/main.css
@@ -327,11 +327,12 @@ footer {
 /* Mobile (max-width: 576px) */
 @media (max-width: 576px) {
   .calendario {
-    width: 100%;
-    max-width: none;
+    width: 80%;
+    margin-left: 25%;
   }
-  .calendario-calendar {
-    grid-template-columns: repeat(3, 1fr);
+  .reservas input {
+    margin-left: 0;
+    width: 90%;
   }
   .visita h3 {
     font-size: 0.875rem;
