--- a/css/main.css
+++ b/css/main.css
@@ -392,6 +392,10 @@ footer {
     width: 100%;
     max-width: none;
   }
+  .reservas input {
+    margin-left: 0;
+    width: 90%;
+  }
   .calendario-calendar {
     grid-template-columns: repeat(4, 1fr);
   }
